<resources>
    <string name="app_name">PQR Movil</string>
    <string name="action_settings">Settings</string>
    <string name="cambiar_entidad">Choose another agency</string>
    <string name="consulta_manual">Add an existing ticket</string>
    <string name="cancelar">Cancel</string>
    <string name="title_activity_mostrar_formulario">Show form</string>
    <string name="primer_nombre">Given name</string>
    <string name="segundo_nombre">Middle name</string>
    <string name="primer_apellido">Family name</string>
    <string name="segundo_apellido">Other family names</string>
    <string name="direccion">Address</string>
    <string name="e_mail">Email</string>
    <string name="telefono">Phone</string>
    <string name="celular">Mobile</string>
    <string name="documento">ID number</string>
    <string name="descripcion_solicitud">Request</string>
    <string name="hechos_solicitud">Request details</string>
    <string name="pretensiones_solicitud">Claim details</string>
    <string name="respuesta_solicitud">Response</string>
    <string name="boton_enviar">Done</string>
    <string name="campo_requerido">Required field</string>
    <string name="cargando">Loading&#8230;</string>
    <string name="progress_dialog_procesando">Processing</string>
    <string name="progress_dialog_enviando">Connecting</string>
    <string name="error_wifi">Could not establish a connection</string>
    <string name="error_wifi_revisar">Check you internet connection</string>
    <string name="choose_entidades_dialog">Select an agency</string>
    <string name="boton_entidades_dialog">Accept</string>
    <string name="seleccionar_archivo">Select file</string>
    <string name="enviando">Sending&#8230;</string>
    <string name="test_mensaje" />
    <string name="test_codigo" />
    <string name="test_error_nombre" />
    <string name="test_error_apellido" />
    <string name="test_error_solicitud" />
    <string name="test_error_email" />
    <string name="mensaje_informacion">In construction</string>
    <string name="error_conexion_servidor">Could not establish a connection to the server</string>
    <string name="error_desconocido">Unkwown error</string>
    <string name="mensaje_rango_caracteres">Your %1$s field must have between %2$d and %3$d characters</string>
    <string name="mensaje_num_caracteres">The %1$s field must have at least %2$d characters</string>
    <string name="mensaje_email">Wrong email format</string>
    <string name="mensaje_tipo1">Only letters and spaces are allowed</string>
    <string name="mensaje_tipo2">Only letters are allowed</string>
    <string name="mensaje_tipo4">Only letters and these symbols are allowed: - _ . , : ; ¡ ! ¿ ? \' \" #</string>
    <string name="mensaje_tipo5">Only uppercase letters and numbers are allowed</string>
    <string name="mensaje_tipo6">Wrong phone format</string>
    <string name="mensaje_revise_datos">Wrong format data, please check</string>
    <string name="consultar_solicitud">Enter the tracking code</string>
    <string name="codigo_seguimiento">Tracking code</string>
    <string name="consulta_descripcion">Here you can check opened tickets in the web page or in the Call Center</string>
    <string name="boton_cancelar">Cancel</string>
    <string name="tipo_solicitud">Ticket type</string>
    <string name="estado">Status</string>
    <string name="eliminar_exito">Ticket deleted locally</string>
    <string name="eliminar_en_red_fracaso"> pero no se pudo eliminar en notificaciones</string>
    <string name="eliminar_fracaso">Deletion failed</string>
    <string name="salvar_consulta">Ticket saved locally</string>
    <string name="solicitud_existe">Tracking code ticket duplicated</string>
    <string name="solicitud_actualizada">Successful updating</string>
    <string name="solicitud_no_actualizada">Failed updating</string>
    <string name="solicitud_agregada">Successful saved</string>
    <string name="etiqueta_entidad">Agency</string>
    <string name="etiqueta_codigo">Tracking code</string>
    <string name="etiqueta_fecha">Creation date</string>
    <string name="etiqueta_fecha_actualizacion">Updating date</string>
    <string name="etiqueta_estado">Status</string>
    <string name="etiqueta_descripcion">Request</string>
    <string name="etiqueta_tipo_solicitud">Ticket type</string>
    <string name="etiqueta_hechos">Request details</string>
    <string name="etiqueta_respuesta">Resolution message</string>
    <string name="nombre_tipo_solicitud">--Ticket type--</string>
    <string name="seleccione_tipo_solicitud">--Seleccione el tipo de Solicitud--</string>
    <string name="queja">Queja</string>
    <string name="sugerencia">Sugerencia</string>
    <string name="registro_civil">Registro civil</string>
    <string name="instrucciones_titulo">Instructions</string>
    <string name="instrucciones_texto">        \n<b><u>Para crear una solicitud</u></b>\n
        Este app le permite radicar peticiones, quejas, reclamos, denuncias y otro tipo de solicitudes directamente en los sistema de Atención al Ciudadano de las diferentes entidades del sector público que están vinculadas a este sistema.\n\n
            \t1. Dirijase al menú principal\n
            \t2. Dirijase a la opción <i>Crear Solicitud</i>\n
            \t3. Escoja la entidad ante la cual desea interponer su solicitud\n
            \t4. Ingrese los datos solicitados\n
            \t5. Si el sistema se lo indica haga las correcciones necesarias\n
            \t6. Envíe la solicitud\n
            \t7. Si la solicitud fue creada correctamente en el sistema de la entidad, el app le mostrará un resumen de la solicitud y la dejara guardada para seguimiento\n\n<b><u>Para verificar el estado de una solicitud</u></b>\n   
       Una vez quede radicada su solicitud la entidad le entregará un código de seguimiento que quedará grabado automáticamente en esta app para que Usted pueda hacer el seguimiento del estado de esa solicitud.\n\n
            \t1. Dirijase al menú principal\n
            \t2. Dirijase a la opción <i>Consultar solicitudes</i>\n
            \t3. Escoja la solicitud que desea verificar\n
            \t4. Escoja <i>Consultar el estado actual</i>\n
            \t5. El app consultará en el sistema de la entidad y le mostrará el resumen de su solicitud y el estado actual\n\n<b><u>Para verificar el estado de una solicitud creada en el portal de la entidad</u></b>\n   
       Usted puede consultar el estado de solicitudes creadas mediante otros sistemas tales como el sistema de PQRD del portal o el Call Center de cada entidad.\n\n
            \t1. Dirijase al menú principal\n
            \t2. Dirijase a la opción <i>Consultar solicitudes</i>\n
            \t3. Cuando este en el listado de solicitudes use el menú contextual y escoja la opción <i>Agregar nuevo código</i>\n
            \t4. Escoja la entidad ante la cual radico la solicitud\n
            \t5. Digite el <i>Código de Seguimiento</i> (Debe ser exactamente igual al que le entregó la entidad)\n  
            \t6. El app consultará en el sistema de la entidad y le mostrará el resumen de su solicitud y el estado actual\n
            \t7. Si el sistema le muestra un mensaje de error es posible que haya escogido mal la entidad o escrito incorrectamente el código de seguimiento. Revise los datos e intente nuevamente\n
            \t8. El app guardará esta información automáticamente en el listado de solicitudes para que la pueda consultar fácilmente en el futuro\n\n<b><u>Para eliminar una solicitud</u></b>\n   
       Usted puede eliminar las solicitudes guardadas en esta app cuando ya no las necesite. En ningún caso puede eliminar o modificar las solicitudes que existen en el sistema de información de la entidad.\n\n
            \t1. Dirijase al menú principal\n
            \t2. Dirijase a la opción <i>Consultar solicitudes</i>\n
            \t3. Escoja la solicitud que desea eliminar\n
            \t4. Escoja la opción <i>Eliminar</i>\n
            \t5. El aplicativo eliminará la solicitud de este equipo. La solicitud seguirá existiendo en el sistema de la entidad y seguirá su trámite normal\n</string>
    <string name="creditos_titulo">Credits</string>
    <string name="creditos_texto">        \nInnovation team
        \n<b>Micrositios S.A.S.</b>         \n\nLeonardo Forero Sandoval
        \n<i>gerencia@micrositios.net</i>\n</string>
    <string name="aviso_legal_titulo">Aviso a los titulares de datos personales que trata este aplicativo</string>
    <string name="aviso_legal_texto">\nConforme al derecho al Habeas Data reconocido por el artículo 15 de la Constitución Política y desarrollado en la Ley 1581 de 2012 y en cumplimiento a lo establecido por el artículo 10 del Decreto 1377 de 2013, las entidades vinculadas a este aplicativo, se permiten informar:
 		\n\nQue han recolectado algunos de sus datos personales en uso de sus facultades legales y que los mismos forman parte de las bases de datos que manejan y/o administran.
 		\n\nQue por este mecanismo le solicitamos que permita a la entidad a la cual esta dirigiendo su solicitud de Atención al Ciudadano a través de la herramienta PQRapp, continuar con el tratamiento de sus datos personales.
 		\n\nEn este sentido, PQRapp, requiere obtener la autorización por parte del usuario para que de manera expresa, voluntaria, previa y debidamente informada permita que la aplicación utilice, recolecte, almacene, suprima, intercambie, actualice y disponga entre otros, de los datos suministrados y que han sido debidamente procesados en las bases de datos correspondientes y que permiten llevar a cabo los objetivos propuestos por la entidad.
 		\n\nPara el ejercicio de sus derechos de conocer, actualizar, rectificar o suprimir sus datos personales podrá hacerlo directamente con la entidad ante la cual interpuso su solicitud.
 		\n\nLas políticas bajo las cuales serán tratados sus datos personales y los mecanismos para ejercer sus derechos como titular de los mismos pueden ser consultadas en la página web de cada entidad.
 		\n\nEn caso que la supresión no proceda por razones legales, contractuales o de otro tipo, se le informará de ello oportunamente.\n</string>
    <string name="desarrolladores_titulo">Info for Agencies and Developers</string>
    <string name="desarrolladores_texto">        \nEste aplicativo ha sido desarrollado dando cumplimiento a lo requerido por:\n
        \n1. Manual Gel V3.1
        \n2. Códígo contencioso Administrativo. Ley 1437 de 2011
        \n3. Decreto Antitrámites 19 de 2012
        \n4. Estatuto Anticorrupción Ley 1474 de 2011
        \n5. Recomendaciones de uso del lenguaje único de intercambio de datos (GELXML)
        \n\nEste aplicativo puede ser integrado a cualquier sistema de atención al ciudadano con el que cuente su entidad sin importar la tecnología, siempre y cuando sea posible la instalación de web services.
        \n\nContáctese con nosotros para recibir una evaluación de integración.
        \n\n<i>gerencia@micrositios.net</i>\n
        
        \n\n</string>
    <string name="boton_listo">Close</string>
    <string name="aceptar_terminos">Accept terms and conditions</string>
    <string name="aceptar">Accept</string>
    <string name="agregar_solicitud">New ticket</string>
    <string name="descargando">Downloading</string>
    <string name="usiacuri">Usiacuri</string>
    <string name="seleccione_webservice_mensaje">Please, select webservice you want to use</string>
    <string name="produccion">Production</string>
    <string name="pruebas">Tests</string>
    <string name="ninguna_solicitud_agregada">You don\'t have any request&#8230;</string>
    <string name="ninguna_solicitud_agregada_instrucciones">You can add one by creating it pressing the button Create or Add an existing one</string>
    <string name="tomar_foto">Take picture</string>
    <string name="tomar_video">Record video</string>
    <string name="estado_solicitudes">Estado de Solicitudes Hechas</string>
</resources>