<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GCMActivity" >

	<TextView
        android:id="@+id/lblNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usiacuri" />

    <EditText
        android:id="@+id/txtNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar" />

    <Button
        android:id="@+id/btnRegGcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_civil" />

    <Button
        android:id="@+id/btnDesRegGcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descargando" />

    <TextView
        android:id="@+id/tvcodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
