<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
		        android:text="@string/aviso_legal_titulo" 
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
		        android:paddingLeft="10dp"
		        android:paddingRight="10dp"
		        android:textSize="18sp" />
		    
		    <TextView
		        android:text="@string/aviso_legal_texto" 
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
		        android:paddingLeft="20dp"
		        android:paddingBottom="5dp"
		        android:paddingRight="20dp" />

        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/cb_terminos_y_condiciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:text="@string/aceptar_terminos"
        android:textColor="@color/aplicacion" />

</LinearLayout>
